# cpc-cwm

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
cpc_scholar_bot/: github_publisher.py  main.py  slack_reader.py  whitepaper.py
whitepapers/: 2026-03-23.md
